action onclick btn

--- a/lesson-12/dom.html
+++ b/lesson-12/dom.html
@@ -12,6 +12,7 @@
     <div class="mouse"></div>
     <div class="mouse"></div>
     <div class="hello"></div>
+    <button id="btn" onclick="updateHello()">Update Hello</button>
     <script src="index.js"></script>
 </body>
 </html>
