set get attribute for cat images

--- a/lesson-12/dom.html
+++ b/lesson-12/dom.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1 id="heading">Dog</h1> 
+    <img src="images/1.jpg" alt="dog" id="dog">
+    <button id="btn" onclick="changeImage()">Change Image</button>
     <div id="cat"></div>
     <div class="mouse"></div>
     <div class="mouse"></div>
