add events listeners

--- a/lesson-12/dom.html
+++ b/lesson-12/dom.html
@@ -8,13 +8,13 @@
 <body>
     <h1 id="heading">Dog</h1> 
     <img src="images/1.jpg" alt="dog" id="dog">
-    <button id="btn" onclick="changeImage()">Change Image</button>
+    <button id="change-cat">Change Image</button>
     <div id="cat"></div>
     <div class="mouse"></div>
     <div class="mouse"></div>
     <div class="mouse"></div>
     <div class="hello"></div>
-    <button id="btn" onclick="updateHello()">Update Hello</button>
+    <button id="update-hello">Update Hello</button>
     <script src="index.js"></script>
 </body>
 </html>
